--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,10 @@ pluginManagement {
             name = 'MinecraftForge'
             url = 'https://maven.minecraftforge.net/'
         }
+        maven {
+            name = 'parchmentmc'
+            url = 'https://maven.parchmentmc.org'
+        }
     }
 }
 
