--- a/gradle.properties
+++ b/gradle.properties
@@ -48,7 +48,7 @@ tconstruct_version_range=[3.10.1.76,)
 mod_id=tinker_zenith
 mod_name=Tinker Zenith
 mod_license=MIT
-mod_version=1.0
+mod_version=1.0-alpha
 mod_group_id=com.github.heiwenziduo.tinker_zenith
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Heiwenziduo@git
