使发射时刀柄对准中心点

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,11 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
+# proxy pass to JVM
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=7890
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=7890
 
 ## Environment Properties
 
